$Id$


sigsafe-0.1.4 (not yet released)
-------------

* Fixed a major bug in which multithreaded Linux/x86_64 builds would
  pass an incorrect first argument to the kernel.

* Build system improvements. A couple command-line flags and an install
  target.

* Fixes suggested by Marcin 'Qrczak' Kowalczyk <qrczak@knm.org.pl>:

  - Allow sigsafe_install_tsd() to be called before sigsafe_install_handler().

  - sigsafe_read, sigsafe_readv, sigsafe_write, and sigsafe_writev should
    return ssize_t, not int.

  - New bindings for several system calls:
    - open
    - recv
    - recvfrom
    - recvmsg
    - send
    - sendmsg
    - sendto

  - In the Darwin dyld workaround, "volatile" was misplaced.

  - Removed SIGPIPE reference in read(2) documentation (copy'n'pasted
    from write(2)); this never happens on read.


sigsafe-0.1.3 (released 11 May 2004)
-------------

* Added support for several platforms:

  - Linux/alpha
  - Linux/ia64
  - Linux/x86_64
  - NetBSD/i386
  - Solaris/sparc
  - Tru64/alpha

* A split into single-threaded and multi-threaded versions, to support
  platforms with poor thread support. (*BSD systems.)

* Build system improvements.

  - The .sconf_temp and test directories are built in per-platform
    directories, along with the main system, so it's easier to share a build
    directory between many different platforms. (This makes testing on
    SourceForge's compile farm and HP's test drive systems easier.)

  - The single "scons" command will also build single-threaded and
    multi-threaded versions, where available.

  - The SConstruct file is more readable, with numerous comments. It should be
    easy to change, even for people who have never seen scons before.

* Better hiding of implementation details:

  - a separate header for internal functions
  - more static variables
  - private functions are marked with __attribute((visibility("private")))
    where available, always suffixed with _ to mark them as such.
